Clean code and update pom